# pixelfix-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
.cargo/: config.toml
repository/: showcase.webm
repository/changelog/0.1.1/: meow.webm
src/: main.rs
