[package]
name = "pixelfix"
version = "0.1.2"
edition = "2024"
authors = ["hamhimdev <hamhimdev@proton.me>"]
description = "Fix transparent pixels in PNG images by filling them with the nearest non-transparent pixel's color."
license = "MIT"
repository = "https://codeberg.org/hamhim/pixelfix"
keywords = ["roblox", "pixelfix", "pixelfix-rs"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "pixelfix"
path = "src/main.rs"

[dependencies]
image = "0.25"
kiddo = "5.2"
rayon = "1.11"
indicatif = "0.18"
num_cpus = "1.17"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "consoleapi",
    "processenv",
    "winbase",
    "winuser",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
